src/main/java/cminor/parser/Parser.java
package cminor.parser;

import cminor.ast.AST;
import cminor.ast.classbody.ClassBody;
import cminor.ast.classbody.FieldDecl;
import cminor.ast.classbody.MethodDecl;
import cminor.ast.expressions.*;
import cminor.ast.expressions.Literal.ConstantType;
import cminor.ast.misc.TypeParam;
import cminor.ast.misc.TypeParam.TypeAnnotation;
import cminor.ast.misc.*;
import cminor.ast.operators.AssignOp;
import cminor.ast.operators.AssignOp.AssignType;
import cminor.ast.operators.BinaryOp;
import cminor.ast.operators.BinaryOp.BinaryType;
import cminor.ast.operators.LoopOp;
import cminor.ast.operators.LoopOp.LoopType;
import cminor.ast.operators.Operator;
import cminor.ast.operators.UnaryOp;
import cminor.ast.operators.UnaryOp.UnaryType;
import cminor.ast.statements.AssignStmt;
import cminor.ast.statements.BlockStmt;
import cminor.ast.statements.CaseStmt;
import cminor.ast.statements.ChoiceStmt;
import cminor.ast.statements.DoStmt;
import cminor.ast.statements.ExprStmt;
import cminor.ast.statements.ForStmt;
import cminor.ast.statements.IfStmt;
import cminor.ast.statements.ListStmt;
import cminor.ast.statements.LocalDecl;
import cminor.ast.statements.ReturnStmt;
import cminor.ast.statements.RetypeStmt;
import cminor.ast.statements.Statement;
import cminor.ast.statements.StopStmt;
import cminor.ast.statements.WhileStmt;
import cminor.ast.topleveldecls.ClassDecl;
import cminor.ast.topleveldecls.EnumDecl;
import cminor.ast.topleveldecls.FuncDecl;
import cminor.ast.topleveldecls.GlobalDecl;
import cminor.ast.topleveldecls.ImportDecl;
import cminor.ast.topleveldecls.MainDecl;
import cminor.ast.types.ArrayType;
import cminor.ast.types.ClassType;
import cminor.ast.types.DiscreteType;
import cminor.ast.types.DiscreteType.Discretes;
import cminor.ast.types.ListType;
import cminor.ast.types.ScalarType;
import cminor.ast.types.ScalarType.Scalars;
import cminor.ast.types.Type;
import cminor.ast.types.VoidType;
import cminor.lexer.Lexer;
import cminor.messages.CompilationMessage;
import cminor.messages.MessageHandler;
import cminor.messages.errors.syntax.SyntaxError;
import cminor.micropasses.ImportHandler;
import cminor.token.Token;
import cminor.token.TokenType;
import cminor.utilities.PrettyPrint;
import cminor.utilities.Vector;

/**
 * A parser class responsible for checking if a C Minor program is syntactically valid.
 * <p><br>
 *     This is a handwritten LL(3) parser that interfaces with the {@link Lexer} to
 *     determine if a user correctly wrote a program. The parser is handwritten as
 *     suppose to tool-generated in order to facilitate the generation of more specific
 *     and meaningful error messages in the future.
 * </p>
 * @author Daniel Levy
 */
public class Parser {

    /**
     * Instance of the {@link Lexer} that the parser requests tokens from.
     */
    private final Lexer input;

    /**
     * Number of lookaheads the parser uses, currently set to 3.
     */
    private final int k = 3;

    /**
     * {@link Vector} of tokens containing the current lookaheads we are using.
     */
    private final Vector<Token> lookaheads;

    /**
     * Current lookahead position in the {@link #lookaheads} vector.
     */
    private int lookPos;

    /**
     * Stack that keeps track of all tokens we are currently parsing.
     */
    private final Vector<Token> tokenStack;

    /**
     * {@link MessageHandler} to generate syntax errors.
     */
    private final MessageHandler handler;

    /**
     * Flag set when a user wants to see every token that is parsed.
     */
    private static boolean printTokens = false;

    /**
     * Flag set when the parser begins to parse an imported file.
     */
    private boolean importMode;

    // Hacks to get IO statements to be parsed correctly... :(
    private boolean insideParen;
    private boolean insideIO;
    private boolean insideField;

    public Parser(Lexer input) {
        this.input = input;
        this.lookPos = 0;
        this.lookaheads = new Vector<>();
        this.tokenStack = new Vector<>();
        this.handler = new MessageHandler();
        this.importMode = false;
        this.insideParen = false;
        this.insideIO = false;
        this.insideField = false;

        for(int i = 0; i < k; i++) {
            this.lookaheads.add(new Token());
            consume();
        }
    }

    public static void setPrintTokens() { printTokens = !printTokens; }

    private String errorPosition(int start, int end) {
        return PrettyPrint.RED
                + " ".repeat(Math.max(0, start + 2))
                + "^".repeat(Math.max(0, end - start))
                + PrettyPrint.RESET;
    }

    private void consume() {
        lookaheads.set(lookPos,this.input.nextToken());
        lookPos = (lookPos + 1) % k;
    }

    private void match(TokenType expectedTok) {
        tokenStack.top().setEndLocation(currentLA().getEndPos());

        if(nextLA(expectedTok)) {
            if(printTokens) { System.out.println(currentLA().toString()); }
            consume();
        }
        else {
            //System.out.println(handler.createError().header());
            input.printSyntaxError(currentLA().getStartPos());
            System.out.println(errorPosition(currentLA().getStartPos().column,currentLA().getEndPos().column));

            throw new RuntimeException();
        }
    }

    private Token currentLA() { return lookaheads.get(lookPos%k); }
    private Token currentLA(int nextPos) { return lookaheads.get((lookPos+nextPos)%k); }

    private boolean nextLA(TokenType expectedTok) { return currentLA().getTokenType() == expectedTok; }
    private boolean nextLA(String expectedLexeme) { return currentLA().equals(expectedLexeme); }
    private boolean nextLA(TokenType expectedTok, int nextPos) {
        return currentLA(nextPos).getTokenType() == expectedTok;
    }

    public Token nodeToken() {
        Token t = tokenStack.pop();
        input.setText(t);

        if(tokenStack.top() != null)
            tokenStack.top().setEndLocation(t.getEndPos());

        return t;
    }

    public Token nodeTokenTop() {
        Token t = tokenStack.top();
        input.setText(t);
        return t;
    }

    /*
    _________________________________________
                    FIRST SETS
    _________________________________________
    */
    private boolean inScalarTypeFIRST() {
        return nextLA(TokenType.STRING)
                || nextLA(TokenType.REAL)
                || nextLA(TokenType.BOOL)
                || nextLA(TokenType.INT)
                || nextLA(TokenType.CHAR);
    }

    private boolean inDataDeclFIRST() {
        return nextLA(TokenType.PROPERTY)
                || nextLA(TokenType.PROTECTED)
                || nextLA(TokenType.PUBLIC);
    }

    private boolean inStatementFIRST() {
        return inConstantFIRST()
                || inScalarTypeFIRST()
                || nextLA(TokenType.LBRACK)
                || nextLA(TokenType.NEW)
                || nextLA(TokenType.ID)
                || nextLA(TokenType.LPAREN)
                || nextLA(TokenType.NOT)
                || nextLA(TokenType.BNOT)
                || nextLA(TokenType.LBRACE)
                || nextLA(TokenType.RETURN)
                || nextLA(TokenType.SET)
                || nextLA(TokenType.RETYPE)
                || nextLA(TokenType.IF)
                || nextLA(TokenType.WHILE)
                || nextLA(TokenType.FOR)
                || nextLA(TokenType.DO)
                || nextLA(TokenType.CHOICE)
                || nextLA("append")
                || nextLA("remove")
                || nextLA("insert")
                || nextLA(TokenType.CIN)
                || nextLA(TokenType.COUT)
                || nextLA(TokenType.BREAK)
                || nextLA(TokenType.CONTINUE)
                || nextLA(TokenType.STOP)
                || nextLA(TokenType.PARENT);
    }

    private boolean inPrimaryExpressionFIRST() {
        return inConstantFIRST()
                || nextLA(TokenType.ARRAY)
                || nextLA(TokenType.LIST)
                || nextLA(TokenType.TUPLE)
                || nextLA(TokenType.LBRACK)
                || nextLA(TokenType.LPAREN)
                || nextLA(TokenType.ID)
                || nextLA(TokenType.SLICE)
                || nextLA("length")
                || nextLA(TokenType.CAST)
                || nextLA(TokenType.BREAK)
                || nextLA(TokenType.CONTINUE)
                || nextLA(TokenType.PARENT);
    }

    private boolean inConstantFIRST() {
        return nextLA(TokenType.MINUS)
                || nextLA(TokenType.STR_LIT)
                || nextLA(TokenType.TEXT_LIT)
                || nextLA(TokenType.REAL_LIT)
                || nextLA(TokenType.BOOL_LIT)
                || nextLA(TokenType.INT_LIT)
                || nextLA(TokenType.CHAR_LIT)
                || nextLA(TokenType.ARRAY)
                || nextLA(TokenType.LIST)
                || nextLA(TokenType.NEW);
    }

    /*
    _________________________________________
                    FOLLOW SETS
    _________________________________________
    */

    private boolean inTypeFOLLOW() {
        return nextLA(TokenType.INT,1)
                || nextLA(TokenType.CHAR,1)
                || nextLA(TokenType.BOOL,1)
                || nextLA(TokenType.REAL,1)
                || nextLA(TokenType.STRING,1)
                || nextLA(TokenType.ID,1)
                || nextLA(TokenType.LIST,1)
                || nextLA(TokenType.ARRAY);
    }

    private boolean inPrimaryExpressionFOLLOW() {
        return nextLA(TokenType.LBRACK)
                || nextLA(TokenType.AT)
                || nextLA(TokenType.LPAREN)
                || nextLA(TokenType.ELVIS)
                || nextLA(TokenType.PERIOD);
    }

    private boolean inPowerExpressionFOLLOW() {
        return nextLA(TokenType.MULT)
                || nextLA(TokenType.DIV)
                || nextLA(TokenType.MOD);
    }

    private boolean inShiftExpressionFOLLOW() {
        return nextLA(TokenType.LT)
                || nextLA(TokenType.GT)
                || nextLA(TokenType.LTEQ)
                || nextLA(TokenType.GTEQ);
    }

    private Vector<AST> handleImports() {
        ImportHandler importHandler = new ImportHandler(input.getFileName());

        while(nextLA(TokenType.INCLUDE))
            importHandler.enqueue(importStmt());

        return importHandler.analyzeImports();
    }

    // ThisStmt will be the main method used for parsing when a user
    // runs C Minor through the virtual machine
    public Vector<? extends AST> nextNode() throws CompilationMessage {
        Vector<AST> nodes = new Vector<>();

        while(!nextLA(TokenType.EOF)) {
            if(nextLA(TokenType.INCLUDE))
                nodes.merge(handleImports());
            else if(nextLA(TokenType.DEF)
                    && nextLA(TokenType.ID,1)
                    && !(nextLA(TokenType.LT,2)
                    || nextLA(TokenType.LPAREN,2)
                    || nextLA(TokenType.COLON,2))) {
                nodes.add(enumType());
            }
            else if(nextLA(TokenType.DEF) && ((nextLA(TokenType.CONST, 1) || nextLA(TokenType.GLOBAL, 1))))
                nodes.merge(globalVariable());
            else if(nextLA(TokenType.ABSTR) || nextLA(TokenType.FINAL) || nextLA(TokenType.CLASS)) {
                nodes.add(classType());
            }
            // Parse FuncDecl
            else if((nextLA(TokenType.DEF))
                    && (nextLA(TokenType.PURE,1)
                    || nextLA(TokenType.RECURS,1)
                    || ((nextLA(TokenType.ID,1)
                    && (nextLA(TokenType.LPAREN,2)
                    || nextLA(TokenType.LT,2)))
                    && ((!nextLA(TokenType.MAIN,1))
                    && (!nextLA(TokenType.MAIN,2)))))) {
                nodes.add(function());

            }
            // Parse LocalDecl
            else if((nextLA(TokenType.DEF) && nextLA(TokenType.ID,1) && nextLA(TokenType.COLON,2))
                    || (nextLA(TokenType.DEF) && nextLA(TokenType.LOCAL,1))) {
                nodes.merge(declaration());
            }
            // Parse Statement | Expression
            else { nodes.add(statement()); }
        }

        return nodes;
    }

    /*
    ____________________________________________________________

                          COMPILATION UNIT
    ____________________________________________________________
    */

    // 1. compilation ::= import_stmt* enum_type* global_variable* class_type* function* main
    public CompilationUnit compilation() {
        tokenStack.add(currentLA());

        Vector<ImportDecl> imports = new Vector<>();
        if(nextLA(TokenType.INCLUDE)) {
            Vector<AST> im = handleImports();
            for(AST p : im)
                imports.add(p.asTopLevelDecl().asImport());
        }

        Vector<EnumDecl> enums = new Vector<>();
        while(nextLA(TokenType.DEF)
                && nextLA(TokenType.ID,1)
                && !(nextLA(TokenType.LT,2)
                || nextLA(TokenType.LPAREN,2))) {
            enums.add(enumType());
        }

        Vector<GlobalDecl> globals = new Vector<>();
        while(nextLA(TokenType.DEF) && (nextLA(TokenType.CONST, 1) || nextLA(TokenType.GLOBAL, 1))) {
            Vector<AST> globe = globalVariable();
            for(AST g : globe)
                globals.merge(g.asTopLevelDecl().asGlobalDecl());
        }

        Vector<ClassDecl> classes = new Vector<>();
        while(nextLA(TokenType.ABSTR) || nextLA(TokenType.FINAL) || nextLA(TokenType.CLASS)) {
            classes.add(classType());
        }

        Vector<FuncDecl> funcs = new Vector<>();
        while((nextLA(TokenType.DEF)) && !nextLA(TokenType.MAIN,1)) { funcs.add(function()); }

        MainDecl md = null;
        if(!importMode)
            md = mainFunc();

        if(!nextLA(TokenType.EOF)) {
            System.out.println(PrettyPrint.CYAN + "Syntax Error Detected! Unexpected End of File in " + input.getFileName() + ".");
            System.exit(1);
        }
        else if(printTokens) { System.out.println(currentLA().toString()); }

        return new CompilationUnit(nodeToken(),input.getFileName(),imports,enums,globals,classes,funcs,md);
    }

    /*
    ____________________________________________________________
                        COMPILER DIRECTIVES
    ____________________________________________________________
    */

    // 2. file-merge ::= '#include' STRING_LITERAL
    private ImportDecl importStmt() {
        tokenStack.add(currentLA());

        match(TokenType.INCLUDE);
        Name fileName = new Name(currentLA());
        match(TokenType.STR_LIT);

        return new ImportDecl(nodeToken(),fileName);
    }

    /*
    ____________________________________________________________
                          ENUM DECLARATION
    ____________________________________________________________
    */

    // 3. enum_type ::= 'def' ID 'type' '=' '{' enum_field ( ',' , enum_field)* '}'
    private EnumDecl enumType() {
        tokenStack.add(currentLA());

        match(TokenType.DEF);
        Name n = new Name(currentLA());
        match(TokenType.ID);
        match(TokenType.TYPE);
        match(TokenType.EQ);
        match(TokenType.LBRACE);

        Vector<Var> vars = new Vector<>(enumField());

        while(nextLA(TokenType.COMMA)) {
            match(TokenType.COMMA);
            vars.add(enumField());
        }

        match(TokenType.RBRACE);
        
        return new EnumDecl(nodeToken(),n,vars);
    }

    // 4. enum_field ::= ID ( '=' constant )?
    private Var enumField() {
        tokenStack.add(currentLA());

        Name n = new Name(currentLA());
        match(TokenType.ID);

        if(nextLA(TokenType.EQ)) {
            match(TokenType.EQ);
            Expression e = constant();

            return new Var(nodeToken(),n,e);
        }

        return new Var(nodeToken(),n);
    }

    /*
    ____________________________________________________________
              GLOBAL VARIABLES AND VARIABLE DECLARATIONS
    ____________________________________________________________
    */

    // 5. global_variable ::= 'def' ( 'const' | 'global' ) variable_decl
    private Vector<AST> globalVariable() {
        tokenStack.add(currentLA());
        boolean isConstant = false;

        match(TokenType.DEF);
        if(nextLA(TokenType.CONST)) {
            match(TokenType.CONST);
            isConstant = true;
        }
        else { match(TokenType.GLOBAL); }

        Vector<Var> vars = variableDecl();
        Vector<AST> globals = new Vector<>();

        for(Var v : vars) {
            tokenStack.top().setEndLocation(v.getLocation().end);
            input.setText(tokenStack.top());
            globals.add(new GlobalDecl(tokenStack.top(),v,isConstant));
        }

        tokenStack.pop();
        return globals;
    }

    // 6. variable_decl ::= variable_decl_list
    private Vector<Var> variableDecl() { return variableDeclList(); }

    // 7. variable_decl_list ::= variable_decl_init ( ',' variable_decl_init )*
    private Vector<Var> variableDeclList() {
        Vector<Var> varList = new Vector<>(variableDeclInit());

        while(nextLA(TokenType.COMMA)) {
            match(TokenType.COMMA);
            varList.add(variableDeclInit());
        }

        return varList;
    }

    // 8. variable_decl_init ::= ID ':' type ('=' (expression | 'uninit' ))?
    private Var variableDeclInit() {
        tokenStack.add(currentLA());

        Name n = new Name(currentLA());
        match(TokenType.ID);
        match(TokenType.COLON);
        Type t = type();

        if(nextLA(TokenType.EQ)) {
            match(TokenType.EQ);
            if(nextLA(TokenType.UNINIT)) {
                match(TokenType.UNINIT);
                return new Var(nodeToken(),n,new Literal(),t); // give it some random value
            }
            else {
                Expression e = expression();
                return new Var(nodeToken(),n,e,t);
            }
        }
        return new Var(nodeToken(),n,t);
    }

    /*
    ____________________________________________________________
                                TYPES
    ____________________________________________________________
    */

    // 9. type ::= scalar_type
    //           | class_name
    //           | 'List' '[' type ']'
    //           | 'Array' '[' type ']'
    private Type type() {
        if(nextLA(TokenType.ID)) { return className(); }
        else if(nextLA(TokenType.LIST)) {
            tokenStack.add(currentLA());

            match(TokenType.LIST);

            match(TokenType.LBRACK);
            Type ty = type();
            match(TokenType.RBRACK);

            if(ty.isListType()) {
                ty.asListType().numOfDims += 1;
                ty.copyMetaData(nodeToken());
                return ty;
            }
            return new ListType(nodeToken(),ty,1);
        }
        else if(nextLA(TokenType.ARRAY)) {
            tokenStack.add(currentLA());

            match(TokenType.ARRAY);

            match(TokenType.LBRACK);
            Type ty = type();
            match(TokenType.RBRACK);

            input.setText(tokenStack.top());

            if(ty.isArrayType()) {
                ty.asArrayType().numOfDims += 1;
                ty.copyMetaData(nodeToken());
                return ty;
            }
            return new ArrayType(nodeToken(),ty,1);
        }
        return scalarType();
    }

    // 10. scalar_type ::= discrete_type
    //                  | 'String' ( '[' Int_literal ']' )*
    //                  | 'Real'   ( '[' Int_literal ']' )*
    private Type scalarType() {
        if(nextLA(TokenType.STRING)) {
            tokenStack.add(currentLA());
            match(TokenType.STRING);

            if(nextLA(TokenType.LBRACK)) {
                ScalarType arrType = new ScalarType(tokenStack.top(),Scalars.STR);

                int dims = 0;
                while(nextLA(TokenType.LBRACK)) {
                    match(TokenType.LBRACK);
                    match(TokenType.INT_LIT);
                    match(TokenType.RBRACK);
                    dims += 1;
                }

                return new ArrayType(nodeToken(),arrType,dims);
            }

            return new ScalarType(nodeToken(),Scalars.STR);
        }
        else if(nextLA(TokenType.REAL)) {
            tokenStack.add(currentLA());
            match(TokenType.REAL);

            if(nextLA(TokenType.LBRACK)) {
                ScalarType arrType = new ScalarType(tokenStack.top(),Scalars.REAL);

                int dims = 0;
                while(nextLA(TokenType.LBRACK)) {
                    match(TokenType.LBRACK);
                    match(TokenType.INT_LIT);
                    match(TokenType.RBRACK);
                    dims += 1;
                }

                return new ArrayType(nodeToken(),arrType,dims);
            }

            return new ScalarType(nodeToken(),Scalars.REAL);
        }
        else { return discreteType(); }
    }

    // 11. discrete_type ::= 'Bool' ( '[' Int_literal ']' )*
    //                     | 'Int'  ( '[' Int_literal ']' )*
    //                     | 'Char' ( '[' Int_literal ']' )*
    private Type discreteType() {
        tokenStack.add(currentLA());

        if(nextLA(TokenType.BOOL)) {
            match(TokenType.BOOL);

            if(nextLA(TokenType.LBRACK)) {
                DiscreteType arrType = new DiscreteType(tokenStack.top(),Discretes.BOOL);

                int dims = 0;
                while(nextLA(TokenType.LBRACK)) {
                    match(TokenType.LBRACK);
                    match(TokenType.INT_LIT);
                    match(TokenType.RBRACK);
                    dims += 1;
                }

                return new ArrayType(nodeToken(),arrType,dims);
            }

            return new DiscreteType(nodeToken(),Discretes.BOOL);
        }
        else if(nextLA(TokenType.INT)) {
            match(TokenType.INT);

            if(nextLA(TokenType.LBRACK)) {
                DiscreteType arrType = new DiscreteType(tokenStack.top(),Discretes.INT);

                int dims = 0;
                while(nextLA(TokenType.LBRACK)) {
                    match(TokenType.LBRACK);
                    match(TokenType.INT_LIT);
                    match(TokenType.RBRACK);
                    dims += 1;
                }

                return new ArrayType(nodeToken(),arrType,dims);
            }

            return new DiscreteType(nodeToken(),Discretes.INT);
        }
        else {
            match(TokenType.CHAR);

            if(nextLA(TokenType.LBRACK)) {
                DiscreteType arrType = new DiscreteType(tokenStack.top(),Discretes.CHAR);

                int dims = 0;
                while(nextLA(TokenType.LBRACK)) {
                    match(TokenType.LBRACK);
                    match(TokenType.INT_LIT);
                    match(TokenType.RBRACK);
                    dims += 1;
                }

                return new ArrayType(nodeToken(),arrType,dims);
            }

            return new DiscreteType(nodeToken(),Discretes.CHAR);
        }
    }

    // 12. class_name ::= ID ( type_params? )?
    private ClassType className() {
        tokenStack.add(currentLA());

        Name n = new Name(currentLA());
        match(TokenType.ID);

        if(nextLA(TokenType.LT)) {
            Vector<Type> types = typeParams();
            return new ClassType(nodeToken(),n,types);
        }
        return new ClassType(nodeToken(),n);
    }

    // --. type_params : '@' type ( ',' type )* '@'
    private Vector<Type> typeParams() {
        if(nextLA(TokenType.LT))
            match(TokenType.LT);
        else
            match(TokenType.AT);
        Vector<Type> types = new Vector<>(type());

        while(nextLA(TokenType.COMMA)) {
            match(TokenType.COMMA);
            types.add(type());
        }

        if(nextLA(TokenType.GT))
            match(TokenType.GT);
        else
            match(TokenType.AT);
        return types;
    }

    /*
    ____________________________________________________________
                          CLASS DECLARATION
    ____________________________________________________________
    */

    // 13. class_type ::= ( 'abstr' | 'final' )? 'class' ID type_params? super_class? class_body
    private ClassDecl classType() {
        tokenStack.add(currentLA());

        Modifier mod = new Modifier();
        if(nextLA(TokenType.ABSTR)) {
            mod.setAbstract();
            match(TokenType.ABSTR);
        }
        else if(nextLA(TokenType.FINAL)) {
            mod.setFinal();
            match(TokenType.FINAL);
        }

        match(TokenType.CLASS);
        Name n = new Name(currentLA());
        match(TokenType.ID);

        Vector<TypeParam> types = new Vector<>();
        if(nextLA(TokenType.LT)) { types = typeifierParams(); }

        ClassType ct = null;
        if(nextLA(TokenType.INHERITS)) { ct = superClass(); }

        ClassBody body = classBody();
        return new ClassDecl(nodeToken(),mod,n,types,ct,body);
    }

    // 14. type_params ::= '<' typeifier ( ',' typeifier )* '>'
    private Vector<TypeParam> typeifierParams() {
        match(TokenType.LT);
        Vector<TypeParam> typefs = new Vector<>(typeifier());

        while(nextLA(TokenType.COMMA)) {
            match(TokenType.COMMA);
            typefs.add(typeifier());
        }
        match(TokenType.GT);

        return typefs;
    }

    // 15. typeifier ::= ( 'discr' | 'scalar' | 'class' )? ID
    private TypeParam typeifier() {
        tokenStack.add(currentLA());

        TypeAnnotation pt = null;
        if(nextLA(TokenType.DISCR)) {
            pt = TypeAnnotation.DISCR;
            match(TokenType.DISCR);
        }
        else if(nextLA(TokenType.SCALAR)) {
            pt = TypeAnnotation.SCALAR;
            match(TokenType.SCALAR);
        }
        else if(nextLA(TokenType.CLASS)) {
            pt = TypeAnnotation.CLASS;
            match(TokenType.CLASS);
        }

        Name n = new Name(currentLA());
        match(TokenType.ID);

        return new TypeParam(nodeToken(),pt,n);
    }

    // 16. super_class ::= 'inherits' ID type_params?
    private ClassType superClass() {
        match(TokenType.INHERITS);

        tokenStack.add(currentLA());
        Name superName = new Name(currentLA());
        match(TokenType.ID);

        Vector<Type> vectorOfTypes = new Vector<>();
        if(nextLA(TokenType.LT))
            vectorOfTypes = typeParams();

        return new ClassType(nodeToken(),superName,vectorOfTypes);
    }

    // 17. class_body ::= '{' data_decl* method_decl* '}'
    private ClassBody classBody() {
        tokenStack.add(currentLA());
        match(TokenType.LBRACE);

        Vector<FieldDecl> dataDecls = new Vector<>();
        while(inDataDeclFIRST() && nextLA(TokenType.ID,1)) { dataDecls.merge(dataDecl()); }

        Vector<MethodDecl> methodDecls = new Vector<>();
        while(nextLA(TokenType.PROTECTED) || nextLA(TokenType.PUBLIC)) { methodDecls.add(methodDecl()); }

        match(TokenType.RBRACE);
        return new ClassBody(nodeToken(),dataDecls,methodDecls);
    }

    /*
    ____________________________________________________________
                          FIELD DECLARATION
    ____________________________________________________________
    */

    // 18. data_decl ::= ( 'property' | 'protected' | 'public' ) variable_decl
    private Vector<FieldDecl> dataDecl() {
        tokenStack.add(currentLA());

        Modifier mod = new Modifier();
        if(nextLA(TokenType.PROPERTY)) {
            mod.setProperty();
            match(TokenType.PROPERTY);
        }
        else if(nextLA(TokenType.PROTECTED)) {
            mod.setProtected();
            match(TokenType.PROTECTED);
        }
        else {
            mod.setPublic();
            match(TokenType.PUBLIC);
        }

        Vector<Var> vars = variableDecl();
        Vector<FieldDecl> fields = new Vector<>();

        for(Var v : vars) {
            tokenStack.top().setEndLocation(v.getLocation().end);
            input.setText(tokenStack.top());
            fields.add(new FieldDecl(tokenStack.top(),mod,v));
        }

        tokenStack.pop();
        return fields;
    }

    /*
    ____________________________________________________________
                          METHOD DECLARATION
    ____________________________________________________________
    */
